--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -2,7 +2,7 @@
 
 $skyblueColor : rgba(40,175,195,255);
 $whiteColor : #fff;
-$blackColor : rgba(40,175,195,255);
+$blackColor : black;
 $coralColor : rgba(255,141,97,255);
 $lightgreyColor : rgba(242,242,242,255);
 $greyColor : rgba(112,112,112,255);
