create Jumbotron of the page

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -6,3 +6,8 @@ $blackColor : black;
 $coralColor : rgba(255,141,97,255);
 $lightgreyColor : rgba(242,242,242,255);
 $greyColor : rgba(112,112,112,255);
+
+// ? transition 
+
+$transition : all .5s cubic-bezier(.215, .61, .355, 1);
+         
