--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -33,3 +33,10 @@ a{
 button{
     border: none;
 }
+
+.separator{
+    display: inline-block;
+    width: 80px;
+    height: 2px;
+    background-color: coral;
+}
