fix cards list and app cover with images

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -9,5 +9,5 @@ $greyColor : rgba(112,112,112,255);
 
 // ? transition 
 
-$transition : all .5s cubic-bezier(.215, .61, .355, 1);
+$transition : all 1s cubic-bezier(.215, .61, .355, 1);
          
