--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -9,7 +9,7 @@ body{
 }
 
 .container{
-    width: 1250px;
+    width: 1500px;
     margin: 0 auto;
 }
 
@@ -36,7 +36,26 @@ button{
 
 .separator{
     display: inline-block;
-    width: 80px;
-    height: 2px;
+    width: 100px;
+    height: 3px;
     background-color: coral;
 }
+
+.spacer{
+    align-items: center;
+    justify-content: center;
+    height: 150px;
+    background-color: rgba(25,25,25,255);
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: bolder;
+    transition : all 1s cubic-bezier(.215, .61, .355, 1);
+}
+.spacer:hover{   
+    background-color: rgba(40,175,195,255);
+}
+
+.spacer i{
+    margin-left: 0.7rem;
+}
+
