create footer of the page and lateral icon

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -59,3 +59,16 @@ button{
     margin-left: 0.7rem;
 }
 
+.bg-fb{
+    background-color: rgba(60,89,152,255);
+}
+.bg-tw{
+    background-color: rgba(84,172,238,255);
+}
+.bg-ig{
+    background-color: rgba(63,114,155,255);
+}
+.bg-yt{
+    background-color: rgba(205,32,31,255);
+}
+
